# Minebot

./: .gitignore  README.md
minebot/: .gitignore  CLA.md  README.md  pyproject.toml  setup-hooks.sh
minebot/.githooks/: post-commit  pre-commit
minebot/configuration/: debug.json  settings.json
minebot/configuration/localization/: en-US.json  tr.json
minebot/configuration/wiki/en-US/: sample.md
minebot/docs/: BoostRewardSystem.md  BotActivitySystem.md  CommandSystem.md  DatabaseSystem.md  LocalizationGuide.md  MessageSystem.md  MinecraftSynchronization.md  RewardSystem.md  SuggestionSystem.md  TicketSystem.md  WebSocketSystem.md  WikiSystem.md
minebot/src/: __init__.py  __main__.py
minebot/src/components/: __init__.py
minebot/src/core/: __init__.py  global_state.py
minebot/src/data_types/: __init__.py  timed.py
minebot/src/database/: __init__.py  base.py  session.py
minebot/src/debug/: __init__.py  debugger.py
minebot/src/events/: __init__.py
minebot/src/exceptions/: __init__.py  command.py  utility.py
minebot/src/extensions/: __init__.py
minebot/src/helper/: __init__.py  channel.py  command.py  event.py  menu.py  message.py  minecraft.py  modal.py  punishment.py  ticket.py  time.py  user.py  wiki.py
minebot/src/hooks/: __init__.py  database.py  minecraft.py
minebot/src/model/: __init__.py  config.py  message.py  ready.py  schemas.py
minebot/src/settings/: __init__.py  json_wrapper.py
minebot/src/utils/: __init__.py  file.py
minebot/src/websocket/: __init__.py  action_registry.py  listener.py  manager.py  server.py
(+125 files in other folders)
